[package]
name = "buy-now"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
publish = false

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.8.0"
spl-token = {version = "3.2.0", features = ["no-entrypoint"]}
spl-associated-token-account = {version = "1.0.3", features = [ "no-entrypoint" ]}

[lib]
crate-type = ["cdylib", "lib"]